--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -7,3 +7,8 @@ pytest-env==0.6.*
 pytest-cov==2.8.*
 pytest-vcr==1.*
 mock==4.0.*
+
+# Documentation Requirements
+sphinx==3.*
+sphinx-autodoc-typehints[type_comments]==1.*
+recommonmark==0.*
